# perplexity-api-client-python

./: README.md  pyproject.toml
examples/: api_test.py  chat_cli.py
perplexity_api_client/: __init__.py  constants.py  exceptions.py  perplexity.py  types.py
tests/: instruction.md  test_module_unittest.py  test_module_unittest_errors.py  test_module_unittest_errors_live.py  test_module_unittest_live.py
